Fix launch -configuration param to always be proper URI
Ensures that the parameter can always we be converted back to URI.
It's been already done for -dev param value.
Fixed PluginBasedLaunchTest to no longer try to "workaround"
-configuration values that can't be converted to URI.